<resources>
    <string name="app_name">Digizone</string>
    <string name="waiting">Đang xử lý</string>
    <string name="main_page">Trang chủ</string>
    <string name="quit">Thoát</string>
    <string name="quit_message">Bạn có muốn thoát khỏi chương trình không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="description">Mô tả</string>
    <string name="cancel">Hủy</string>
    <string name="ok">Đồng ý</string>
    <string name="search">Tìm kiếm</string>
    <string name="image_des">Hình Ảnh</string>
    <string name="detail">Chi tiết</string>
    <string name="show_map">Xem trên bản đồ</string>
    <string name="list_empty">Chưa có dữ liệu!</string>
    <string name="search_hint">Địa điểm muốn tìm</string>
    <string-array name="district">
        <item>Chọn quận</item>
        <item>Quận 1</item>
        <item>Quận 2</item>
        <item>Quận 3</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 7</item>
        <item>Quận 8</item>
        <item>Quận 9</item>
        <item>Quận 10</item>
        <item>Quận 11</item>
        <item>Quận 12</item>
        <item>Bình Tân</item>
        <item>Bình Thạnh</item>
        <item>Gò Vấp</item>
        <item>Phú Nhuận</item>
        <item>Tân Bình</item>
        <item>Tân Phú</item>
        <item>Thủ Đức</item>
    </string-array>
    <string name="ward">Phường</string>
    <string-array name="type">
        <item>Chọn loại</item>
        <item>Coffee</item>
    </string-array>
    <string name="message_title">Thông báo</string>
    <string name="message_quit">Thoát</string>
    <string name="internet_disabled">Không có kết nối mạng</string>
    <string name="gps_disabled">Dịch vụ địa điểm chưa bật</string>
    <string name="internet_needed">Chương trình này yêu cầu phải có kết nối Internet để hoạt động. Hãy cấu hình kết nối mạng của bạn.</string>
    <string name="gps_needed">Chương trình này yêu cầu phải có kết nối GPS để hoạt động. Hãy cấu hình dịch vụ địa điểm của bạn.</string>
    <string name="config">Cấu hình</string>
    <string name="copyright">Bản quyền thuộc về công ty\nTNHH Digipay</string>
    <string-array name="district0">
        <item>Chọn phường</item>
    </string-array>
    <string-array name="district1">
        <item>Chọn phường</item>
        <item>Bến Nghé</item>
        <item>Bến Thành</item>
        <item>Cầu Kho</item>
        <item>Cầu Ông Lãnh</item>
        <item>Cô Giang</item>
        <item>Đa Kao</item>
        <item>Nguyễn Cư Trinh</item>
        <item>Nguyễn Thái Bình</item>
        <item>Phạm Ngũ Lão</item>
        <item>Tân Định</item>
    </string-array>
    <string-array name="district2">
        <item>Chọn phường</item>
        <item>Phường An Khánh</item>
        <item>Phường An Lợi Đông</item>
        <item>Phường An Phú</item>
        <item>Phường Bình An</item>
        <item>Phường Bình Khánh</item>
        <item>Phường Bình Trưng Đông</item>
        <item>Phường Bình Trưng Tây</item>
        <item>Phường Cát Lái</item>
        <item>Phường Thạnh Mỹ Lợi</item>
        <item>Phường Thảo Điền</item>
        <item>Phường Thủ Thiêm</item>
    </string-array>
    <string-array name="district3">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
    </string-array>
    <string-array name="district4">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
        <item>Phường 16</item>
        <item>Phường 18</item>
    </string-array>
    <string-array name="district5">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
    </string-array>
    <string-array name="district6">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
    </string-array>
    <string-array name="district7">
        <item>Chọn phường</item>
        <item>Phường Bình Thuận</item>
        <item>Phường Phú Mỹ</item>
        <item>Phường Phú Thuận</item>
        <item>Phường Tân Hưng</item>
        <item>Phường Tân Kiểng</item>
        <item>Phường Tân Phong</item>
        <item>Phường Tân Phú</item>
        <item>Phường Tân Quy</item>
        <item>Phường Tân Thuận Đông</item>
        <item>Phường Tân Thuận Tây</item>
    </string-array>
    <string-array name="district8">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
        <item>Phường 16</item>
    </string-array>
    <string-array name="district9">
        <item>Chọn phường</item>
        <item>Hiệp Phú</item>
        <item>Long Bình</item>
        <item>Long Phước</item>
        <item>Long Thạnh Mỹ</item>
        <item>Long Trường</item>
        <item>Phú Hữu</item>
        <item>Phước Bình</item>
        <item>Phước Long A</item>
        <item>Phước Long B</item>
        <item>Tân Phú</item>
        <item>Tăng Nhơn Phú A</item>
        <item>Tăng Nhơn Phú B</item>
        <item>Trường Thạnh</item>
    </string-array>
    <string-array name="district10">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
    </string-array>
    <string-array name="district11">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
        <item>Phường 16</item>
    </string-array>
    <string-array name="district12">
        <item>Chọn phường</item>
        <item>An Phú Đông</item>
        <item>Đông Hưng Thuận</item>
        <item>Hiệp Thành</item>
        <item>Tân Chánh Hiệp</item>
        <item>Tân Hưng Thuận</item>
        <item>Tân Thới Hiệp</item>
        <item>Tân Thới Nhất</item>
        <item>Thạnh Lộc</item>
        <item>Thạnh Xuân</item>
        <item>Thới An</item>
        <item>Trung Mỹ Tây</item>
    </string-array>
    <string-array name="binh_tan">
        <item>Chọn phường</item>
        <item>Phường An Lạc</item>
        <item>Phường An Lạc A</item>
        <item>Phường Bình Hưng Hòa</item>
        <item>Phường Bình Hưng Hòa A</item>
        <item>Phường Bình Hưng Hòa B</item>
        <item>Phường Bình Trị Đông</item>
        <item>Phường Bình Trị Đông A</item>
        <item>Phường Bình Trị Đông B</item>
        <item>Phường Tân Tạo</item>
        <item>Phường Tân Tạo A</item>
    </string-array>
    <string-array name="binh_thanh">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
        <item>Phường 17</item>
        <item>Phường 19</item>
        <item>Phường 21</item>
        <item>Phường 22</item>
        <item>Phường 24</item>
        <item>Phường 25</item>
        <item>Phường 26</item>
        <item>Phường 27</item>
        <item>Phường 28</item>
    </string-array>
    <string-array name="go_vap">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
        <item>Phường 16</item>
        <item>Phường 17</item>
    </string-array>
    <string-array name="phu_nhuan">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
        <item>Phường 17</item>
    </string-array>
    <string-array name="tan_binh">
        <item>Chọn phường</item>
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường 7</item>
        <item>Phường 8</item>
        <item>Phường 9</item>
        <item>Phường 10</item>
        <item>Phường 11</item>
        <item>Phường 12</item>
        <item>Phường 13</item>
        <item>Phường 14</item>
        <item>Phường 15</item>
    </string-array>
    <string-array name="tan_phu">
        <item>Chọn phường</item>
        <item>Phường Hiệp Tân</item>
        <item>Phường Hoà Thạnh</item>
        <item>Phường Phú Thạnh</item>
        <item>Phường Phú Thọ Hoà</item>
        <item>Phường Phú Trung</item>
        <item>Phường Sơn Kỳ</item>
        <item>Phường Tân Qúy</item>
        <item>Phường Tân Sơn Nhì</item>
        <item>Phường Tân Thành</item>
        <item>Phường Tân Thới Hoà</item>
        <item>Phường Tây Thạnh</item>
    </string-array>
</resources>